# tlv8_python

./: .coveragerc  .gitignore  .travis.yml  CHANGES.md  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: main.yml
tests/: __init__.py  tlv8_decode_integer_tests.py  tlv8_decode_tests.py  tlv8_deep_decode_tests.py  tlv8_encode_tests.py  tlv8_entry_tests.py  tlv8_entrylist_tests.py  tlv8_enum_test.py  tlv8_real_world_test.py  tlv8_to_json_test.py
tlv8/: __init__.py
